Avoid NPE when gltf isn't found, TRAFFIC_REQUEST_LOADVEHICLE with key payload